--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "papaparse": "^5.5.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.1",
     "tailwindcss": "^4.1.1",
     "three": "^0.175.0"
