--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,6 +12,7 @@ pydantic==2.11.2
 pydantic_core==2.33.1
 pymongo==4.11.3
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 python-multipart==0.0.20
 pytz==2025.2
 six==1.17.0
